# observability_with_rust

./: Cargo.toml  docker-compose.yaml  prometheus.yaml
src/: custom_error.rs  main.rs  open_telemetry.rs  prometheus.rs
